# tinyvtu

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/actions/setup-environment/: action.yaml
.github/setup-environment/: action.yaml
.github/workflows/: build_and_test.yaml
cmake/: TinyVTUConfig.cmake.in  tinyvtuConfig.cmake.in
examples/: CMakeLists.txt  example_tetra.cpp
src/: tinyvtu.cpp  tinyvtu.hpp
src/internal/: DataBlock.cpp  DataBlock.hpp  GridData.cpp  GridData.hpp  XMLWriter.cpp  XMLWriter.hpp
tests/: test_datablock.cpp  test_grid_data.cpp  test_tinyvtu.cpp  test_xml_writer.cpp
